--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
         </div>
    </div>
    <div class="getintouch" id="getintouchs">
-    <form>
-      <div class="one">
+    <form name="contact" netlify>
+      <div class="one" >
         <h3 class="touch_text" >GET IN TOUCH</h3>
         <h2 class="btn" style="color: rgb(255, 255, 255); cursor: pointer;">X</h2>
       </div>
@@ -272,7 +272,7 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
       <input type="passwords" name="Lastname"  minlength="2" maxlength="10" placeholder="Lastname">
       <input type="email" placeholder="email">
       <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="Enter your phone number">
-      <input type="submit">
+      <button id="button" type="submit">Submit</button>
       
   </form>
    </div>
