--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
       
   </form>
    </div>
-      <h1><span style="color:#13450F;font-family: 'Franklin;">A</span>bout</h1>
+      <h1><span style="color:#13450F;font-family: 'Franklin'">A</span>bout</h1>
       <div class="middle_element">
        <div class="elem">
         <a href="mailto:mauryahimasnhu517@gmail.com"><h2>Mail Me</h2></a>
