file name changes

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
         <a href="mailto:mauryahimasnhu517@gmail.com"><h2>Mail Me</h2></a>
        </div>
        <div class="elem"> 
-        <h2 class="Touch">Get In Touch</h2>
+        <h2 class="Touch">Get In Touchs</h2>
        </div>
        <div class="elem">
         <h2 class="media" >Social</h2>
