--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
         </div>
    </div>
    <div class="getintouch" id="getintouchs">
+   
     <form name="contact" netlify>
+
       <div class="one" >
         <h3 class="touch_text" >GET IN TOUCH</h3>
         <h2 class="btn" style="color: rgb(255, 255, 255); cursor: pointer;">X</h2>
@@ -282,7 +284,7 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
         <a href="mailto:mauryahimasnhu517@gmail.com"><h2>Mail Me</h2></a>
        </div>
        <div class="elem"> 
-        <h2 class="Touch">Get In Touchs</h2>
+        <h2 class="Touch">Get In Touch</h2>
        </div>
        <div class="elem">
         <h2 class="media" >Social</h2>
