--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
         <h2 class="btn" style="color: rgb(255, 255, 255); cursor: pointer;">X</h2>
       </div>
       
-      <input type="text" name="Firstname" minlength="2" maxlength="10" placeholder="Firstname">
+      <input type="text" name="Firstname" minlength="2" maxlength="10" placeholder="Firstname"><br>
       <input type="passwords" name="Lastname"  minlength="2" maxlength="10" placeholder="Lastname">
       <input type="email" placeholder="email">
       <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="Enter your phone number">
