final commit changes

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
       <input style="width: 82%;" type="text" name="Firstname" minlength="2" maxlength="10" placeholder="Firstname"><br>
       <input type="passwords" name="Lastname"  minlength="2" maxlength="10" placeholder="Lastname">
       <input type="email" placeholder="email">
-      <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="Enter your phone number">
+      <input style="width: 82%;" type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="Enter your phone number">
       <button id="button" type="submit">Submit</button>
       
   </form>
