skill section added

--- a/index.html
+++ b/index.html
@@ -208,7 +208,42 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
     </div>
     
     </div>
-    <!-- <div class="line"></div> -->
+    <div id="skill">
+      <h1>Skill'<span style="color: #14CF93;letter-spacing: 20px;font-family: 'Franklin'">s</h1>
+        
+        <div class="cards">
+          <div class="card">
+            <img src="html.png" alt="">
+          </div>
+          <div class="card">
+            <img src="css.png" alt="">
+          </div>
+          <div class="card">
+            <img src="Javascript.png" alt="">
+          </div>
+          <div class="card">
+            <img src="react.png" alt="">
+          </div>
+          <div class="card">
+            <img src="bootstrap-logo.png" alt="">
+          </div>
+          <div class="card">
+            <img src="nodejs.png" alt="">
+          </div>
+          <div class="card">
+            <img src="XD.png" alt="">
+          </div>
+          <div class="card">
+            <img src="figma.webp" alt="">
+          </div>
+          <div class="card">
+            <img src="photoshop.png" alt="">
+          </div>
+          <div class="card">
+            <img src="git.jpg" alt="">
+          </div>
+        </div>
+    </div>
     <div id="about">
       <div class="sidebar">
         <h3 class="cross" >X</h3>
