scroll to up add

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div id="nav">
       <a href="#about" onclick="scrollToAbout()" >About<span class="line" ></span></a>
       <a href="#work">Feat Work<span class="line"></span></a>
-      <a>Honors<span class="line"></span></a>
+      <a href="">Honors<span class="line"></span></a>
+      <a href="#skill">Skill<span class="line"></span></a>
       <a>contact<span class="line" ></span></a>
       </div>
     
@@ -326,7 +327,11 @@ I AM <span style="color: #14CF93;font-style: italic;font-weight: 400;font-family
         <h2 class="media" >Social</h2>
        </div>
       </div>
+      <div id="circle">
+        <a href="#home"><i class="ri-arrow-up-line"></i></a>
+      </div>
     </div>
+    
   </div>
 
   </div>
